# GymPlusCoffee-Preview

./: .coderabbit.yaml  .gitattributes  .gitignore  CLEANUP_NOTES.md  README.md
backend/: .env  .env.example  Dockerfile  Makefile  README.md  claude-config.json  docker-compose.yml  docker-entrypoint.sh  netsuite_helper.py  pyproject.toml
backend/claude_agents/: clarifier.md  critic.md  suiteql.md
backend/data/: clarifications_compiled.json  system_defaults_results.json
backend/scripts/: run_system_defaults.py
backend/src/claude_sdk_server/: dependencies.py  main.py
backend/src/claude_sdk_server/api/routers/: clarification_router.py  claude_router.py  file_router.py  files_router.py  netsuite_router.py  streaming_router.py
backend/src/claude_sdk_server/clarifications/: __init__.py  __main__.py  config.py  data_loader.py  embeddings.py  engine.py  models.py  service.py  session_store.py  system_defaults.py
backend/src/claude_sdk_server/config/: system_prompts.py
backend/src/claude_sdk_server/models/: events.py
backend/src/claude_sdk_server/services/: claude_service.py  request_analyzer.py
backend/src/claude_sdk_server/utils/: logging_config.py
backend/src/data/: netsuite_query_comparison-2.csv  netsuite_query_results.json
backend/task_sub_agent/: clarifier_rules_questions.md  critic_rule_ideas.txt  gym_plus_coffee_description.txt  ideal_clarification_questions.txt  netsuite_information.txt  netsuite_location_categorized.csv  suiteql_examples.txt  system_prompt.txt
backend/tests/: test_simplified_api.py
frontend/: .env  .env.example  README.md  (+5 more)
(+33 files in other folders)
